2001-02-11  Kenichi Handa  <handa@etl.go.jp>

	* faces.el (mode-line): Set :line-width property to -1.

2001-02-10  Richard M. Stallman  <rms@gnu.org>

	* complete.el (partial-completion-mode): Doc fix.

	* simple.el (delete-key-deletes-forward-mode):
	Change `let' to `let*' to fix gross bug in last change.

	* repeat.el (repeat): Don't let execute-kbd-macro alter
	real-last-command.

2001-02-10  Eli Zaretskii  <eliz@is.elta.co.il>

	* simple.el (eval-expression): Doc fix.

2001-02-09  Dave Love  <fx@gnu.org>

	* imenu.el (imenu-generic-expression): Doc fix.

	* emacs-lisp/re-builder.el (reb-mode): Quote the hook name.  From
	Juanma Barranquero.

	* emacs-lisp/authors.el (authors): Expand `root' before running
	find.

2001-02-09  Kenichi Handa  <handa@etl.go.jp>

	* faces.el (set-face-attribute): Describe the case of a negative
	value specified for :line-width.

2001-02-08  Stefan Monnier  <monnier@cs.yale.edu>

	* which-func.el (which-func-mode): Invert which-func-mode-global.
	Fix from Juanma Barranquero <lektu@uol.com.br>.

2001-02-08  Dave Love  <fx@gnu.org>

	* wid-edit.el (widget-plist-convert-widget): Replace binding of
	widget-plist-value-type.
	(widget-alist-convert-widget): Replace binding of
	widget-alist-value-type.

	* textmodes/paragraphs.el (sentence-end): Doc fix.

	* eshell/em-rebind.el (eshell-cannot-leave-input-list): Remove
	`backward-line'.

	* play/pong.el (pong-blank-color, pong-bat-color)
	(pong-ball-color, pong-border-color, pong-left-key)
	(pong-right-key, pong-up-key, pong-down-key, pong-quit-key)
	(pong-pause-key, pong-resume-key, pong-timer-delay):
	* mail/mh-comp.el (mh-compose-letter-function):
	* eshell/esh-mode.el (eshell-skip-prompt-function):
	* emulation/viper-ex.el (ex-unix-type-shell-options):
	* recentf.el (recentf-menu-filter):
	* ps-print.el (ps-print-region-function):
	* lpr.el (print-region-function):
	* forms.el (forms-mode-hooks):
	* dirtrack.el (dirtrack-directory-change-hook):